<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_marginTop="450dp"
    android:background="@color/green_500"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".UpdateApartmentActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="Cập nhật căn hộ mới"
        android:textColor="@color/beige_700"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updateApartmentNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mã căn hộ : "
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updateFloor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tầng : "
                android:inputType="number|numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updateArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Diện tích căn hộ (m^2) : "
            android:inputType="number|numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updatePrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Giá tiền thuê : "
            android:inputType="number|numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updatePriceGarbage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Giá tiền rác : "
            android:inputType="number|numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updatePriceInternet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Giá Internet : "
            android:inputType="number|numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updateNumBedrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Số phòng ngủ : "
                android:inputType="number|numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="57dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updateNumBathrooms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Số phòng tắm : "
                android:inputType="number|numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Hàng đầu -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/updateGymService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addGymService"
                android:textStyle="bold"
                android:textColor="@color/beige_700"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/updateLaundryService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addLaundryService"
                android:textStyle="bold"
                android:textColor="@color/beige_700"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <!-- Hàng thứ hai -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/updateParkingService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addParkingService"
                android:textStyle="bold"
                android:textColor="@color/beige_700"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/updateSwimmingService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addSwimmingService"
                android:textStyle="bold"
                android:textColor="@color/beige_700"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUpdateItem"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/green"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/blue"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>