<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/green_500"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp"
            tools:context=".AddApartmentActivity">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="Thêm căn hộ mới"
                android:textColor="@color/beige_700"
                android:textSize="30sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="182dp"
                android:layout_height="140dp"
                android:background="@drawable/rounded_background_add">

                <ImageView
                    android:id="@+id/apartmentProfileImage"
                    android:layout_width="175dp"
                    android:layout_height="135dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/upload_2716051" />

            </FrameLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:text="Để chọn hình ảnh hồ sơ, hãy nhấp vào hình ảnh"
                android:textColor="@color/beige_700"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addApartmentNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Mã căn hộ : "
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addFloor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Tầng : "
                        android:inputType="number|numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addArea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Diện tích căn hộ (m^2) : "
                    android:inputType="number|numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addPrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Giá tiền thuê : "
                    android:inputType="number|numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addPriceGarbage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Giá tiền rác + tiền Internet : "
                    android:inputType="number|numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addPriceInternet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Giá điện : "
                    android:inputType="number|numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addNumBedrooms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Số phòng ngủ : "
                        android:inputType="number|numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addNumBathrooms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Số phòng tắm : "
                        android:inputType="number|numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Hàng đầu -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/addGymService"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/addGymService"
                        android:textColor="@color/beige_700"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                    <Switch
                        android:id="@+id/addLaundryService"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/addLaundryService"
                        android:textColor="@color/beige_700"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </LinearLayout>

                <!-- Hàng thứ hai -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/addParkingService"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/addParkingService"
                        android:textColor="@color/beige_700"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                    <Switch
                        android:id="@+id/addSwimmingService"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/addSwimmingService"
                        android:textColor="@color/beige_700"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonAddItem"
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/cancel" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>