<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomNavigation"
        android:layout_marginBottom="-29dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background40"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_background100"
                app:srcCompat="@drawable/baseline_person_24" />

            <TextView
                android:id="@+id/textUsername"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="@color/beige_500"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonEdit"
                android:layout_width="128dp"
                android:padding="5dp"
                android:backgroundTint="@color/blue"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="44dp"
                android:text="Edit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iconEmail"
                android:layout_width="100dp"
                android:padding="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/baseline_email_24"
                android:contentDescription="Icon Description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/headingEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="Email" />
                <TextView
                    android:id="@+id/textEmail"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                     />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_900"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iconPhone"
                android:layout_width="100dp"
                android:padding="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/baseline_phone_24"
                android:contentDescription="Icon Description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/headingPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/phone"
                    tools:ignore="NestedWeights" />
                <TextView
                    android:id="@+id/textPhone"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                     />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_900"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iconAddress"
                android:layout_width="100dp"
                android:padding="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/baseline_home_24"
                android:contentDescription="Icon Description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/headingAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/address"
                    tools:ignore="NestedWeights" />
                <TextView
                    android:id="@+id/textAddress"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                     />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_900"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iconFacebook"
                android:layout_width="100dp"
                android:padding="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/facebook_com"
                android:contentDescription="Facebook" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/headingFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/facebook"
                    tools:ignore="NestedWeights" />
                <TextView
                    android:id="@+id/textFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                     />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@color/beige_700"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu" />


</RelativeLayout>
